@@ -20,6 +20,7 @@
 - Fix: [#11405] Building a path through walls does not always remove the walls.
 - Fix: [#11450] Rides with unsuitable track can't be opened even with "Enable all drawable track pieces" cheat.
 - Fix: [#11455] Object Selection window cuts off scenery names.
+- Fix: [#11640] Objects with a blank description in one language do not fall back to other languages anymore.
 - Fix: RCT1 scenarios have more items in the object list than are present in the park or the research list.
 - Improved: [#6530] Allow water and land height changes on park borders.
 - Improved: [#11390] Build hash written to screenshot metadata.
